[package]
name = "danmaku-server"
version = "0.2.0"
authors = ["FKYnJYQ <loveress01@gmail.com>"]
edition = "2018"

[features]
docker = []

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "2.0.0"
actix-rt = "1.0.0"
actix-web-actors = "2.0.0"
actix = "0.9.0"
rand = "0.7.3"
env_logger = "0.7.1"
serde_json = "1.0.48"
serde = "1.0.104"
actix-files = "0.2.1"
reqwest = "0.10.2"
actix-session = "0.3.0"
oauth2 = "3.0.0-alpha.9"
failure = "0.1.6"
uuid = { version = "0.8.1", features = ["serde", "v4"]}
jsonwebtoken = "7.0.1"
actix-identity = "0.2.1"
envy = "0.4.1"
dotenv = "0.15.0"

[dev-dependencies]
rusty-hook = "^0.11.1"

